--- a/UIDesigner/src/main/res/values/strings.xml
+++ b/UIDesigner/src/main/res/values/strings.xml
@@ -1,249 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">anyones-UIDesigner</string>
-    <string name="ui_designer_title">UI Designer</string>
-    <string name="professional_subtitle">Professional Android UI Designer</string>
-    <string name="version_info">Version 1.0.0 - Professional Edition</string>
-    
-    <!-- Component Categories -->
-    <string name="category_basic">Basic Components</string>
-    <string name="category_input">Input Components</string>
-    <string name="category_layout">Layout Components</string>
-    <string name="category_container">Container Components</string>
-    <string name="category_collection">Collection Components</string>
-    <string name="category_navigation">Navigation Components</string>
-    <string name="category_material">Material Components</string>
-    <string name="category_advanced">Advanced Components</string>
-    <string name="category_custom">Custom Components</string>
-    
-    <!-- Component Names with Descriptions -->
-    <string name="component_textview">TextView</string>
-    <string name="component_textview_desc">Display text content</string>
-    <string name="component_button">Button</string>
-    <string name="component_button_desc">Interactive button element</string>
-    <string name="component_imageview">ImageView</string>
-    <string name="component_imageview_desc">Display images and graphics</string>
-    <string name="component_edittext">EditText</string>
-    <string name="component_edittext_desc">Text input field</string>
-    <string name="component_checkbox">CheckBox</string>
-    <string name="component_checkbox_desc">Boolean selection control</string>
-    <string name="component_radiobutton">RadioButton</string>
-    <string name="component_radiobutton_desc">Single selection from group</string>
-    <string name="component_switch">Switch</string>
-    <string name="component_switch_desc">Toggle switch control</string>
-    <string name="component_seekbar">SeekBar</string>
-    <string name="component_seekbar_desc">Progress and value selector</string>
-    <string name="component_spinner">Spinner</string>
-    <string name="component_spinner_desc">Dropdown selection list</string>
-    <string name="component_linear_layout">LinearLayout</string>
-    <string name="component_linear_layout_desc">Linear arrangement container</string>
-    <string name="component_relative_layout">RelativeLayout</string>
-    <string name="component_relative_layout_desc">Relative positioning container</string>
-    <string name="component_constraint_layout">ConstraintLayout</string>
-    <string name="component_constraint_layout_desc">Constraint-based layout</string>
-    <string name="component_frame_layout">FrameLayout</string>
-    <string name="component_frame_layout_desc">Single child container</string>
-    <string name="component_scroll_view">ScrollView</string>
-    <string name="component_scroll_view_desc">Scrollable content container</string>
-    <string name="component_card_view">CardView</string>
-    <string name="component_card_view_desc">Material Design card</string>
-    <string name="component_recycler_view">RecyclerView</string>
-    <string name="component_recycler_view_desc">Efficient list display</string>
-    <string name="component_list_view">ListView</string>
-    <string name="component_list_view_desc">Simple list display</string>
-    <string name="component_grid_view">GridView</string>
-    <string name="component_grid_view_desc">Grid layout display</string>
-    <string name="component_tab_layout">TabLayout</string>
-    <string name="component_tab_layout_desc">Tab navigation container</string>
-    <string name="component_bottom_navigation">BottomNavigationView</string>
-    <string name="component_bottom_navigation_desc">Bottom navigation bar</string>
-    <string name="component_fab">FloatingActionButton</string>
-    <string name="component_fab_desc">Floating action button</string>
-    <string name="component_toolbar">Toolbar</string>
-    <string name="component_toolbar_desc">App toolbar with actions</string>
-    <string name="component_web_view">WebView</string>
-    <string name="component_web_view_desc">Web content display</string>
-    <string name="component_progress_bar">ProgressBar</string>
-    <string name="component_progress_bar_desc">Progress indicator</string>
-    <string name="component_custom_view">Custom View</string>
-    <string name="component_custom_view_desc">Custom drawable view</string>
-    
-    <!-- Actions and Operations -->
-    <string name="action_drag">Drag to canvas</string>
-    <string name="action_drop">Drop here</string>
-    <string name="action_select">Select component</string>
-    <string name="action_delete">Delete component</string>
-    <string name="action_copy">Copy component</string>
-    <string name="action_paste">Paste component</string>
-    <string name="action_undo">Undo</string>
-    <string name="action_redo">Redo</string>
-    <string name="action_clear_canvas">Clear Canvas</string>
-    <string name="action_export_xml">Export XML</string>
-    <string name="action_save_project">Save Project</string>
-    <string name="action_load_project">Load Project</string>
-    <string name="action_preview">Preview</string>
-    <string name="action_zoom_in">Zoom In</string>
-    <string name="action_zoom_out">Zoom Out</string>
-    <string name="action_fit_to_screen">Fit to Screen</string>
-    <string name="action_toggle_grid">Toggle Grid</string>
-    <string name="action_toggle_guides">Toggle Guides</string>
-    <string name="action_align_left">Align Left</string>
-    <string name="action_align_center">Align Center</string>
-    <string name="action_align_right">Align Right</string>
-    <string name="action_align_top">Align Top</string>
-    <string name="action_align_middle">Align Middle</string>
-    <string name="action_align_bottom">Align Bottom</string>
-    
-    <!-- Panel Titles -->
-    <string name="panel_component_palette">Component Palette</string>
-    <string name="panel_design_canvas">Design Canvas</string>
-    <string name="panel_component_hierarchy">Component Hierarchy</string>
-    <string name="panel_properties">Properties</string>
-    <string name="panel_toolbar">Toolbar</string>
-    
-    <!-- Property Categories -->
-    <string name="property_category_layout">Layout</string>
-    <string name="property_category_appearance">Appearance</string>
-    <string name="property_category_behavior">Behavior</string>
-    <string name="property_category_text">Text</string>
-    <string name="property_category_constraints">Constraints</string>
-    <string name="property_category_margins">Margins</string>
-    <string name="property_category_padding">Padding</string>
-    <string name="property_category_advanced">Advanced</string>
-    
-    <!-- Property Names -->
-    <string name="property_id">ID</string>
-    <string name="property_width">Width</string>
-    <string name="property_height">Height</string>
-    <string name="property_text">Text</string>
-    <string name="property_text_size">Text Size</string>
-    <string name="property_text_color">Text Color</string>
-    <string name="property_background">Background</string>
-    <string name="property_visibility">Visibility</string>
-    <string name="property_enabled">Enabled</string>
-    <string name="property_clickable">Clickable</string>
-    <string name="property_focusable">Focusable</string>
-    <string name="property_margin_left">Margin Left</string>
-    <string name="property_margin_top">Margin Top</string>
-    <string name="property_margin_right">Margin Right</string>
-    <string name="property_margin_bottom">Margin Bottom</string>
-    <string name="property_padding_left">Padding Left</string>
-    <string name="property_padding_top">Padding Top</string>
-    <string name="property_padding_right">Padding Right</string>
-    <string name="property_padding_bottom">Padding Bottom</string>
-    
-    <!-- Accessibility Content Descriptions -->
-    <string name="content_desc_drag_handle">Drag handle for %1$s</string>
-    <string name="content_desc_resize_handle">Resize handle for %1$s</string>
-    <string name="content_desc_component_selected">%1$s selected</string>
-    <string name="content_desc_drop_target">Drop target for components</string>
-    <string name="content_desc_component_icon">%1$s component icon</string>
-    <string name="content_desc_category_header">%1$s category</string>
-    <string name="content_desc_canvas_grid">Canvas grid pattern</string>
-    <string name="content_desc_alignment_guide">Alignment guide</string>
-    <string name="content_desc_selection_border">Selection border</string>
-    <string name="content_desc_toolbar_button">%1$s toolbar button</string>
-    
-    <!-- Status Messages -->
-    <string name="status_component_added">%1$s added to canvas</string>
-    <string name="status_component_deleted">%1$s deleted</string>
-    <string name="status_component_moved">%1$s moved</string>
-    <string name="status_component_resized">%1$s resized</string>
-    <string name="status_component_copied">%1$s copied</string>
-    <string name="status_component_pasted">%1$s pasted</string>
-    <string name="status_canvas_cleared">Canvas cleared</string>
-    <string name="status_xml_exported">XML exported successfully</string>
-    <string name="status_project_saved">Project saved: %1$s</string>
-    <string name="status_project_loaded">Project loaded: %1$s</string>
-    <string name="status_zoom_changed">Zoom: %1$d%%</string>
-    <string name="status_grid_enabled">Grid enabled</string>
-    <string name="status_grid_disabled">Grid disabled</string>
-    <string name="status_guides_enabled">Guides enabled</string>
-    <string name="status_guides_disabled">Guides disabled</string>
-    
-    <!-- Error Messages -->
-    <string name="error_invalid_drop">Cannot drop component here</string>
-    <string name="error_component_overlap">Component overlaps with existing component</string>
-    <string name="error_canvas_bounds">Component is outside canvas bounds</string>
-    <string name="error_layout_constraint">Invalid layout constraint</string>
-    <string name="error_invalid_property">Invalid property value</string>
-    <string name="error_file_not_found">File not found</string>
-    <string name="error_save_failed">Failed to save project</string>
-    <string name="error_load_failed">Failed to load project</string>
-    <string name="error_export_failed">Failed to export XML</string>
-    <string name="error_permission_denied">Permission denied</string>
-    <string name="error_insufficient_space">Insufficient space on canvas</string>
-    
-    <!-- Warning Messages -->
-    <string name="warning_unsaved_changes">You have unsaved changes</string>
-    <string name="warning_large_component_count">Large number of components may affect performance</string>
-    <string name="warning_complex_layout">Complex layout detected</string>
-    <string name="warning_deprecated_component">This component is deprecated</string>
-    
-    <!-- Dialog Messages -->
-    <string name="dialog_unsaved_changes">You have %1$d unsaved components. Save before closing?</string>
-    <string name="dialog_clear_canvas">Clear all components from canvas?</string>
-    <string name="dialog_delete_component">Delete selected component?</string>
-    <string name="dialog_export_xml">Export layout as XML file?</string>
-    <string name="dialog_save_project">Save current project?</string>
-    <string name="dialog_load_project">Load project? Current work will be lost.</string>
-    
-    <!-- Button Labels -->
-    <string name="button_save">Save</string>
-    <string name="button_discard">Discard</string>
-    <string name="button_cancel">Cancel</string>
-    <string name="button_ok">OK</string>
-    <string name="button_yes">Yes</string>
-    <string name="button_no">No</string>
-    <string name="button_apply">Apply</string>
-    <string name="button_reset">Reset</string>
-    <string name="button_clear">Clear</string>
-    <string name="button_export">Export</string>
-    <string name="button_import">Import</string>
-    <string name="button_preview">Preview</string>
-    
-    <!-- Menu Items -->
-    <string name="menu_file">File</string>
-    <string name="menu_edit">Edit</string>
-    <string name="menu_view">View</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_help">Help</string>
-    <string name="menu_new_project">New Project</string>
-    <string name="menu_open_project">Open Project</string>
-    <string name="menu_save_project">Save Project</string>
-    <string name="menu_export_xml">Export XML</string>
-    <string name="menu_preferences">Preferences</string>
-    <string name="menu_about">About</string>
-    
-    <!-- Tooltips -->
-    <string name="tooltip_drag_component">Drag this component to the canvas</string>
-    <string name="tooltip_resize_handle">Drag to resize component</string>
-    <string name="tooltip_alignment_guide">Alignment guide for precise positioning</string>
-    <string name="tooltip_grid_snap">Components snap to grid when enabled</string>
-    <string name="tooltip_zoom_control">Zoom in/out of canvas</string>
-    
-    <!-- Search and Filter -->
-    <string name="search_components">Search components...</string>
-    <string name="filter_all">All Components</string>
-    <string name="filter_recent">Recently Used</string>
-    <string name="filter_favorites">Favorites</string>
-    <string name="no_components_found">No components found</string>
-    <string name="no_search_results">No search results for \"%1$s\"</string>
-    
-    <!-- Component Counts -->
-    <string name="component_count_single">%1$d component</string>
-    <string name="component_count_plural">%1$d components</string>
-    <string name="selected_count_single">%1$d selected</string>
-    <string name="selected_count_plural">%1$d selected</string>
-    
-    <!-- Performance -->
-    <string name="performance_fps">FPS: %1$d</string>
-    <string name="performance_memory">Memory: %1$d MB</string>
-    <string name="performance_render_time">Render: %1$d ms</string>
-    
-    <!-- Themes -->
-    <string name="theme_vs_code_dark">VS Code Dark</string>
-    <string name="theme_vs_code_light">VS Code Light</string>
-    <string name="theme_android_studio_dark">Android Studio Dark</string>
-    <string name="theme_android_studio_light">Android Studio Light</string>
+    <string name="app_name">UI Designer</string>
+    <string name="component_palette">Component Palette</string>
+    <string name="properties_panel">Properties</string>
+    <string name="design_canvas">Design Canvas</string>
+    <string name="generate_xml">Generate XML</string>
+    <string name="clear_canvas">Clear Canvas</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
+    <string name="close">Close</string>
+    <string name="select_component">Select a component to edit its properties</string>
+    <string name="layout_properties">Layout</string>
+    <string name="attribute_properties">Attributes</string>
+    <string name="common_properties">Common</string>
 </resources>
